# pigweed_play

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: ci.yml
apps/: BUILD.bazel  openocd_stm32l4xx.cfg
apps/include/: main.h
apps/src/application/: main.cc  stm32l4xx_it.c  stm32l4xx_it.h
apps/src/application/bootloader_confirm/: bld_confirm.c  bld_confirm.h
apps/src/application/threads/: active_object.h  state_machine.cc  state_machine.h
apps/src/application/threads/test/: active_object_test.cc  state_machine_test.cc
apps/src/bootloader/include/: bld_boot.h  bld_config.h  bld_crc32.h  bld_engine.h  bld_meta.h  bld_protocol.h  bld_storage.h  bld_storage_flash.h  bld_transport.h  bld_transport_uart_dma.h  stm32l4xx_it.h
apps/src/bootloader/src/: bld_boot.c  bld_crc32.c  bld_engine.c  bld_meta.c  bld_storage_flash.c  bld_storage_stm32l4.c  bld_transport_uart_dma.c  main.cc  stm32_hal_msp.c  stm32l4xx_it.c  transport_uart_dma_idle.c
apps/src/bootloader/test/: bld_crc32_test.cc  bld_engine_test.cc  bld_meta_test.cc  bld_storage_flash_test.cc  bld_transport_uart_dma_test.cc  test_stubs.cc  test_stubs.h
apps/src/bsp/: gpio.c  gpio.h
host/: BUILD.bazel
targets/: transition.bzl
targets/stm32l4xx/: BUILD.bazel
targets/stm32l4xx/config/: FreeRTOSConfig.h  stm32l4xx_hal_conf.h
targets/stm32l4xx/ldscripts/: stm32l475vgtx_flash_app.ld  stm32l475vgtx_flash_app_slot_a.ld  stm32l475vgtx_flash_app_slot_b.ld  stm32l475vgtx_flash_bld.ld
tools/: BUILD.bazel  flash.py
tools/bld_host/: bld_host.c
